--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 <Body>
     <H1>Choose A Filter</H1>
-    <button>Save</button>
+    <button class="Gender" onclick="Male()" id = "Male">Male</button>
+    <button class="Gender" onclick="Female()" id = "Female">Female</button>
+
 
     <script src="main.js"></script>
 </Body>
